cluster/apps/home-assistant-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-host
  namespace: home-assistant
spec:
  type: ExternalName
  externalName: 192.168.10.3
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
